--- a/libfile/plugin_runner/Cargo.toml
+++ b/libfile/plugin_runner/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "zoisite_hello_plugin"
+name = "zoisite_plugin_runner"
 version.workspace = true
 edition.workspace = true
 authors.workspace = true
@@ -11,8 +11,6 @@ repository.workspace = true
 keyword.workspace = true
 categories.workspace = true
 
-[lib]
-crate-type = ["cdylib"]
-
 [dependencies]
 zoisite_core = { path = "../../core" }
+zoisite_plugin_manager = { path = "../plugin_manager" }
